--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
+    "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.17.1",
@@ -31,7 +32,8 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.10.5",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -50,7 +52,6 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
   "private": true
