--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
+    "@types/axios": "^0.9.36",
     "@types/react": "^18.2.6",
     "@types/react-native-onboarding-swiper": "^1.1.9",
     "@types/react-test-renderer": "^18.0.0",
