Add data update username, changepassword, forgotpassword

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 MONGODB_URI=mongodb+srv://stylish:stylish@cluster0.kfuzt.mongodb.net/stylish?retryWrites=true&w=majority&appName=Cluster0
 PORT=4000
 JWT_SECRET=mySuperSecretKey12345!@#
+EMAIL_USER=tinphan309z@gmail.com
+EMAIL_PASS=bkhhxzgpysimsvlu
