--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-ratings": "^8.1.0",
@@ -33,7 +34,6 @@
     "react-native-screens": "^3.32.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "^13.10.5",
     "react-redux": "^9.1.2",
     "tailwindcss": "^3.3.2"
   },
