--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
@@ -36,8 +37,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
-    "tailwindcss": "^3.3.2",
-    "expo-image-picker": "~15.0.7"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
