--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.4.0",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.7",
+    "emoji-mart-native": "^0.6.5-beta",
     "expo": "~51.0.28",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
@@ -26,6 +27,7 @@
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
