--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-typing-animation": "^0.1.7",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "tailwindcss": "^3.3.2"
