--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-picker/picker": "^2.9.0",
@@ -20,22 +20,22 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.7",
     "emoji-mart-native": "^0.6.5-beta",
-    "expo": "~51.0.28",
-    "expo-image-picker": "~15.0.7",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.6",
+    "expo-image-picker": "~16.0.1",
+    "expo-status-bar": "~2.0.0",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react": "18.3.1",
+    "react-native": "0.76.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "^3.15.4",
-    "react-native-safe-area-context": "^4.10.7",
-    "react-native-screens": "^3.32.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-typing-animation": "^0.1.7",
     "react-native-vector-icons": "^10.2.0",
@@ -51,7 +51,7 @@
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
     "@types/axios": "^0.9.36",
-    "@types/react": "^18.2.6",
+    "@types/react": "~18.3.12",
     "@types/react-native-onboarding-swiper": "^1.1.9",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
@@ -60,7 +60,7 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
