--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "@react-navigation/stack": "^6.4.0",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.7",
+    "babel-preset-expo": "^12.0.1",
     "emoji-mart-native": "^0.6.5-beta",
     "expo": "^52.0.6",
-    "expo-image-picker": "~16.0.1",
+    "expo-image-picker": "^16.0.2",
+    "expo-speech": "~13.0.0",
     "expo-status-bar": "~2.0.0",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
