--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "nodemailer": "^6.9.16",
+    "socket.io": "^4.8.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
