--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-native-typing-animation": "^0.1.7",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
